--- a/touzi.html
+++ b/touzi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>youzi</title>
+    <title>投资</title>
     <!-- 链接外部样式表 -->
     <link rel="stylesheet" href="css/liebiao.css">
 </head>
