--- a/liebiao.html
+++ b/liebiao.html
@@ -84,8 +84,8 @@
     <div class="main">
         <p class="weizhi">
             您现在的位置：
-            <span><a href="">我要投资</a></span>>
-            <span><a href="">散标列表</a></span>
+            <span><a href="touzi.html">我要投资</a></span>>
+            <span><a href="liebiao.html">散标列表</a></span>
         </p>
 
         <div class="main_left">
