--- a/liebiao.html
+++ b/liebiao.html
@@ -15,7 +15,7 @@
         <div class="h_top">
             <div class="h_t_content">
                 <div class="h_t_c_left">
-                    <img src="images/dianhua.png" alt="">
+                    <img src="images/touzi-liebiao/dianhua.png" alt="">
                     <a href="">全国理财热线：400-777-1268</a>  
                 </div>
                 <div class="h_t_c_right">
@@ -25,8 +25,8 @@
                         <li><a href="">帮助中心</a></li>
                         <li><a href="">财富中心</a></li>
                         <li><a href="">手机客服端</a></li>
-                        <li><a href=""><img src="images/weibo.png" alt=""></a></li>
-                        <li><a href=""><img src="images/weixin.png" alt=""></a></li>
+                        <li><a href=""><img src="images/touzi-liebiao/weibo.png" alt=""></a></li>
+                        <li><a href=""><img src="images/touzi-liebiao/weixin.png" alt=""></a></li>
                         <div class="clear"></div>
                     </ul>
                 </div>
@@ -37,7 +37,7 @@
         <div class="h_bottom">
             <div class="h_b_content">
                 <div class="logo_img">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/touzi-liebiao/logo.png" alt="">
                 </div>
                 <div class="logo">
                     <ul>
@@ -46,13 +46,13 @@
                             <span>shitulicai</span>
                         </li>
                         <li>
-                            <img src="images/wenzi.png" alt="">
+                            <img src="images/touzi-liebiao/wenzi.png" alt="">
                         </li>
                         <div class="clear"></div>
                     </ul>
                 </div>
                 <div class="zhanghu">
-                    <img src="images/zhanghu.png" alt="">
+                    <img src="images/touzi-liebiao/zhanghu.png" alt="">
                     <a href="">我的账户</a>
                 </div>
                 <div class="clear"></div>
@@ -93,7 +93,7 @@
             <div class="caifu">
                 <div class="m_l_left">
                     <h2>师徒财富D20200626-826</h2>&nbsp;
-                    <img src="images/vip.png" alt="">
+                    <img src="images/touzi-liebiao/vip.png" alt="">
 
                     <ul>
                         <li>
@@ -125,8 +125,8 @@
             <div class="caifu">
                 <div class="m_l_left">
                     <h2>师徒财富D20200626-826</h2>&nbsp;
-                    <img src="images/xinshou.png" alt="">
-                    <img src="images/vip.png" alt="">
+                    <img src="images/touzi-liebiao/xinshou.png" alt="">
+                    <img src="images/touzi-liebiao/vip.png" alt="">
 
                     <ul>
                         <li>
@@ -399,7 +399,7 @@
 
             </div>
 
-            <img src="images/zhinan.png" alt="" style="margin: 10px 0;">
+            <img src="images/touzi-liebiao/zhinan.png" alt="" style="margin: 10px 0;">
 
             <div class="m_r_bottom">
                 <h2>常见问题</h2>
@@ -439,11 +439,11 @@
             </ul>
             <ul style="padding-top: 20px;">
                 <li style="float: left;">
-                    <img src="images/erweima1.png" alt="">
+                    <img src="images/touzi-liebiao/erweima1.png" alt="">
                     <p>官方微信</p>
                 </li>
                 <li style="float: left;margin-left: 15px;">
-                    <img src="images/erweima1.png" alt="">
+                    <img src="images/touzi-liebiao/erweima1.png" alt="">
                     <p>手机客服端</p>
                 </li>
             </ul>
