--- a/touzi.html
+++ b/touzi.html
@@ -15,7 +15,7 @@
         <div class="h_top">
             <div class="h_t_content">
                 <div class="h_t_c_left">
-                    <img src="images/dianhua.png" alt="">
+                    <img src="images/touzi-liebiao/dianhua.png" alt="">
                     <a href="">全国理财热线：400-777-1268</a>  
                 </div>
                 <div class="h_t_c_right">
@@ -25,8 +25,8 @@
                         <li><a href="">帮助中心</a></li>
                         <li><a href="">财富中心</a></li>
                         <li><a href="">手机客服端</a></li>
-                        <li><a href=""><img src="images/weibo.png" alt=""></a></li>
-                        <li><a href=""><img src="images/weixin.png" alt=""></a></li>
+                        <li><a href=""><img src="images/touzi-liebiao/weibo.png" alt=""></a></li>
+                        <li><a href=""><img src="images/touzi-liebiao/weixin.png" alt=""></a></li>
                         <div class="clear"></div>
                     </ul>
                 </div>
@@ -37,7 +37,7 @@
         <div class="h_bottom">
             <div class="h_b_content">
                 <div class="logo_img">
-                    <img src="images/logo.png" alt="">
+                    <img src="images/touzi-liebiao/logo.png" alt="">
                 </div>
                 <div class="logo">
                     <ul>
@@ -46,13 +46,13 @@
                             <span>shitulicai</span>
                         </li>
                         <li>
-                            <img src="images/wenzi.png" alt="">
+                            <img src="images/touzi-liebiao/wenzi.png" alt="">
                         </li>
                         <div class="clear"></div>
                     </ul>
                 </div>
                 <div class="zhanghu">
-                    <img src="images/zhanghu.png" alt="">
+                    <img src="images/touzi-liebiao/zhanghu.png" alt="">
                     <a href="">我的账户</a>
                 </div>
                 <div class="clear"></div>
@@ -93,7 +93,7 @@
             <div class="caifu">
                 <div class="m_l_left">
                     <h2>师徒财富D20200626-826</h2>&nbsp;
-                    <img src="images/vip.png" alt="">
+                    <img src="images/touzi-liebiao/vip.png" alt="">
 
                     <ul>
                         <li>
@@ -125,8 +125,8 @@
             <div class="caifu">
                 <div class="m_l_left">
                     <h2>师徒财富D20200626-826</h2>&nbsp;
-                    <img src="images/xinshou.png" alt="">
-                    <img src="images/vip.png" alt="">
+                    <img src="images/touzi-liebiao/xinshou.png" alt="">
+                    <img src="images/touzi-liebiao/vip.png" alt="">
 
                     <ul>
                         <li>
@@ -363,19 +363,19 @@
 
             <div class="m_r_touzi">
                 <p>
-                    <img src="images/xiaotu1.png" alt="">
+                    <img src="images/touzi-liebiao/xiaotu1.png" alt="">
                     累计投资金额：<span>707,906,800</span>元
                 </p>
                 <p>
-                    <img src="images/xiaotu2.png" alt="">
+                    <img src="images/touzi-liebiao/xiaotu2.png" alt="">
                     加入总人次：<span>53,036</span>人次
                 </p>
                 <p>
-                    <img src="images/xiaotu3.png" alt="">
+                    <img src="images/touzi-liebiao/xiaotu3.png" alt="">
                     平均购买金额：<span>13,347.67</span> 元
                 </p>
                 <p>
-                    <img src="images/xiaotu4.png" alt="">
+                    <img src="images/touzi-liebiao/xiaotu4.png" alt="">
                     为用户累计赚取：<span>50,639,661.88</span>元
                 </p>
             </div> 
@@ -383,7 +383,7 @@
             <div class="m_r_caifu">
                 <h2>安心财富收益率</h2>
 
-                <img src="images/tongjitu.png" alt="" style="margin-left: 15px;">
+                <img src="images/touzi-liebiao/tongjitu.png" alt="" style="margin-left: 15px;">
             </div>
 
             <div class="m_r_top">
@@ -424,7 +424,7 @@
 
             </div>
 
-            <img src="images/zhinan.png" alt="" style="margin: 10px 0;">
+            <img src="images/touzi-liebiao/zhinan.png" alt="" style="margin: 10px 0;">
 
             <div class="m_r_bottom">
                 <h2>常见问题</h2>
@@ -464,11 +464,11 @@
             </ul>
             <ul style="padding-top: 20px;">
                 <li style="float: left;">
-                    <img src="images/erweima1.png" alt="">
+                    <img src="images/touzi-liebiao/erweima1.png" alt="">
                     <p>官方微信</p>
                 </li>
                 <li style="float: left;margin-left: 15px;">
-                    <img src="images/erweima1.png" alt="">
+                    <img src="images/touzi-liebiao/erweima1.png" alt="">
                     <p>手机客服端</p>
                 </li>
             </ul>
