--- a/touzi.html
+++ b/touzi.html
@@ -20,8 +20,8 @@
                 </div>
                 <div class="h_t_c_right">
                     <ul>
-                        <li><a href="">登录</a></li>
-                        <li><a href="">注册</a></li>
+                        <li><a href="psddenglu.html">登录</a></li>
+                        <li><a href="psdzhuce.html">注册</a></li>
                         <li><a href="">帮助中心</a></li>
                         <li><a href="">财富中心</a></li>
                         <li><a href="">手机客服端</a></li>
@@ -37,13 +37,17 @@
         <div class="h_bottom">
             <div class="h_b_content">
                 <div class="logo_img">
-                    <img src="images/touzi-liebiao/logo.png" alt="">
+                    <a href="index.html">
+                        <img src="images/touzi-liebiao/logo.png" alt="">
+                    </a>
                 </div>
                 <div class="logo">
                     <ul>
                         <li>
-                            <h2>师徒理财</h2>
-                            <span>shitulicai</span>
+                            <h2><a href="index.html">师徒理财</a></h2>
+                            <span>
+                                <a href="index.html">shitulicai</a>
+                            </span>
                         </li>
                         <li>
                             <img src="images/touzi-liebiao/wenzi.png" alt="">
@@ -53,7 +57,7 @@
                 </div>
                 <div class="zhanghu">
                     <img src="images/touzi-liebiao/zhanghu.png" alt="">
-                    <a href="">我的账户</a>
+                    <a href="personalCenter.html">我的账户</a>
                 </div>
                 <div class="clear"></div>
             </div>
@@ -67,9 +71,9 @@
     <div class="nav">
         <div class="nav_content">
             <ul>
-                <li><a href="">首页</a></li>
-                <li style="background: #d8292f;"><a href="">投资频道</a></li>
-                <li><a href="">理财频道</a></li>
+                <li><a href="index.html">首页</a></li>
+                <li style="background: #d8292f;"><a href="touzi.html">投资频道</a></li>
+                <li><a href="current-account.html">理财频道</a></li>
                 <li><a href="">转让专区</a></li>
                 <li><a href="">安全保障</a></li>
                 <div class="clear"></div>
